	  If X_RANGE is not set, then defaults are used (r944)
(raf) Dynamic: Added Application plugins. Sample plugin added too: netscan. (If plugin stops responding, L+R+START can be used to return control to pspradio.).
BUG FIXES
(raf) Core: Corrected problem when reading directories, where a good read could be interpreted as bad, ended up in nothing being read at all. (r936)
(raf) Core: When changing UIs, the sound is now stopped to prevent event queue fill-ups.

0.38.07 (r927) (2006-03-20)
NEW FEATURES
(raf) Dynamic/Core: Now UIs are selected from a new plugins menu. The menu is auto populated with available plugins. Currently supported: UIs and FSS (File system Servers.)
(raf) Dynamic/FSS: New Plugin: FTPD; not working quite right yet.
BUG FIXES
(raf) png: The shutdown.png was a copy of init.png; corrected.
(raf) Core: Now in Options screen, options that have no alternatives don't have a default "Yes" (like exit pspradio).
(raf) Core: Now the sound is stopped when a screenshot is taken to prevent the event queue from backing up and the app exiting (reported by albadross) (r888)
(sandberg) 3DUI: The new plugin menu is now handled correct when switching UIs.(r909)
(raf) Core: ID3v2 decoding could crash the system on invalid tags.
(raf) Dyn/Core: Plugins now retain memory until they are removed.

0.38.06 (r881) (2006-03-02)
NEW FEATURES
(raf) Core/All: Added plugin system - this will only currently work under f/w 1.5. UIs have been converted to PRXs, as well as PSPRadio. A Loader starts PSPRadio now (on 1.5) (r817-861).
(raf) All: Reorganized hierarchy of files. And enchanced build system.
(raf) Now build generates dynamic and static releases. The dynamic release will currently only work with f/w 1.5 The static release (won't support plugins) should work on all f/w's but won't attempt loading usb/wifi drivers, so it won't have networking/usb unless provided by a loader (needs to be tested under eloader).
BUG FIXES