@@ -6,6 +6,7 @@
 #include <stdlib.h>
 #include <PSPRadio_Exports.h>
 #include <pspmoduleinfo.h>
+#include <PSPRadio.h>
 #include "Common.h"
 
 extern SceModuleInfo module_info;
@@ -18,6 +19,13 @@ int main(int argc, char **argv)
 {
 	SceSize am = sceKernelTotalFreeMemSize();
 	ModuleLog(LOG_INFO, "main('%s'): Available memory: %dbytes (%dKB or %dMB)", module_info.modname, am, am/1024, am/1024/1024);
+	ModuleLog(LOG_INFO, "main: Plugin '%s' Compiled against version PSPRadio Version %s", module_info.modname, PSPRADIO_VERSION);
+
+	/** PSPRadio version is different than the version this plugin was compiled against: */
+	if (strcmp(PSPRadioExport_GetVersion(), PSPRADIO_VERSION) != 0)
+	{
+		ModuleLog(LOG_ALWAYS, "**WARNING**: Plugin '%s' compiled against PSPRadio Version '%s', but this is PSPRadio Version '%s'", PSPRADIO_VERSION, PSPRadioExport_GetVersion());
+	}
 
 	BLOCKER_CREATE_AND_BLOCK(g_blocker, module_info.modname);
 
